mapVariants